bin_PROGRAMS = rectanglecuboidcalc
rectanglecuboidcalc_SOURCES = rectanglecuboidcalc.c
rectanglecuboidcalc_DEPENDENCIES = librec.la libcub.la
noinst_LTLIBRARIES = librec.la libcub.la
librec_la_SOURCES = rec.c librec.h
libcub_la_SOURCES = cub.c libcub.h
rectanglecuboidcalc_LDADD = librec.la libcub.la
