bin_PROGRAMS = rectanglecuboidcalc
rectanglecuboidcalc_SOURCES = rectanglecuboidcalc.c
rectanglecuboidcalc_DEPENDENCIES = librec.la libcub.la
noinst_LTLIBRARIES = librec.la
lib_LTLIBRARIES = libcub.la
librec_la_SOURCES = rec.c librec.h
libcub_la_SOURCES = cub.c libcub.h
libcub_la_LDFLAGS = -version-info 1:0:0
rectanglecuboidcalc_LDADD = librec.la libcub.la
rectanglecuboidcalc_LDFLAGS = -rpath /usr/local/lib
